objects/box__BOSS_Exception__c.object
<CustomObject>
    <fields>
        <fullName>box__BOSS_Action__c</fullName>
        <label>BOSS Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead_Move</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__Box_User__c</fullName>
        <label>Box User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__CollaborationID__c</fullName>
        <label>CollaborationID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Folder_ID__c</fullName>
        <label>Folder ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Folder_Share_Link__c</fullName>
        <label>Folder Share Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Latest_Err_Reason__c</fullName>
        <label>Latest Err Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>box__Lead_Dest_Folder_ID__c</fullName>
        <label>Lead Dest Folder ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__New_Permission__c</fullName>
        <label>New Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This object should not be used to store things forever. The length should not be more than 1 (ideally). The only reason the length is 4 in this case is to accommodate a plan on how to delete/archive these records.</description>
        <label>Retry Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOSS Exception</label>
    <listViews>
        <fullName>box__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BE-{00000}</displayFormat>
        <label>BOSS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOSS Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>